2010-01-20  Alan McGovern  <amcgovern@novell.com>

	* Controls/Src/ScrollViewer/ScrollViewer.cs: Whenever the
	  values for HorizontalScrollBarVisibility or
	  VerticalScrollbarVisibility change we need to update the
	  computed value which the Scrollbars are databound to.

2010-01-14  Mario Carrion  <mcarrion@novell.com>

	* SDKControls/Extended/Src/Automation/CalendarAutomationPeer.cs: Fixes
	exception when raising UIA event.

	r: alan

2009-12-21  Alan McGovern  <amcgovern@novell.com>

	* Controls/Src/ListBox/ListBox.cs: GetContainerItem should
	  return UIElement instead of ListBoxItem so that the method
	  can be used with ItemsControl.

2009-12-17  Alan McGovern  <amcgovern@novell.com>

	* RuntimeControls/SilverlightControls/CheckBox.cs:
	* RuntimeControls/SilverlightControls/RadioButton.cs: Comment
	  out the SL3 visual states for now so the DRTs keep passing.

2009-12-16  Jeffrey Stedfast  <fejj@novell.com>

	* Controls/Src/ToolTip/ToolTip.cs: Added open state attributes.

2009-12-15  Jeffrey Stedfast  <fejj@novell.com>

	* RuntimeControls/SilverlightControls/RadioButton.cs: Added
	validation state attributes.

2009-12-14  Jeffrey Stedfast  <fejj@novell.com>

	* RuntimeControls/SilverlightControls/CheckBox.cs: Added missing
	attributes.

	* RuntimeControls/SilverlightControls/Primitives/IScrollInfo.cs:
	Added the remaining interface methods.

	* Controls/Src/ScrollViewer/ScrollContentPresenter.cs: Added
	method stubs for the remainder for IScrollInfo.

2009-12-07  Jeffrey Stedfast  <fejj@novell.com>

	* RuntimeControls/SilverlightControls/Primitives/IScrollInfo.cs:
	Added MakeVisible().

	* Controls/Src/ScrollViewer/ScrollContentPresenter.cs: Stub out
	MakeVisible() from IScrollInfo.

2009-12-07  Jeffrey Stedfast  <fejj@novell.com>

	* RuntimeControls/SilverlightControls/Primitives/Thumb.cs
	(OnLostMouseCapture): Implemented.
	(OnMouseLeftButtonUp): Removed.

	* RuntimeControls/SilverlightControls/Primitives/ButtonBase.cs