@@ -1,6 +1,12 @@
 2010-01-27  Alan McGovern  <amcgovern@novell.com>
 
 	* Selector.cs:
+	* Selection.cs: Land initial support for multi-selection in
+	  ListBox. moon-units will follow... eventually.
+
+2010-01-27  Alan McGovern  <amcgovern@novell.com>
+
+	* Selector.cs:
 	* Selection.cs: Create a helper class 'Selection' which will
 	  be used to make it easier to keep SelectedItem and
 	  SelectedIndex updated when handling the ListBox multiselect
