@@ -1,3 +1,9 @@
+2010-01-27  Alan McGovern  <amcgovern@novell.com>
+
+	* Controls/Src/ListBox/ListBox.cs: Land initial support for
+	  multi-selection in ListBox. moon-units will follow...
+	  eventually.
+
 2010-01-20  Alan McGovern  <amcgovern@novell.com>
 
 	* Controls/Src/ScrollViewer/ScrollViewer.cs: Whenever the
